--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Changes for Perl extension Perl-Dist-WiX
 
+0.15    Thu  5 Mar 2009
+    1. Updated PDWix::Parameter error class.
+    2. Used PDWiX::Parameter more places.
+    3. Added code to Perl::Dist::WiX->new to attempt 
+       to prevent suicide.
+	4. Minimum perl version is now consistently 5.6.0.
+	   This is tested for throughout the whole distribution.
+
 0.1401  Wed 25 Feb 2009
 	1. Got bit by new indexing rules implemented as of
 	   December 2008, so creating tar file with correct
