--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Changes for Perl extension Perl-Dist-WiX
 
+0.170   Sat 11 Apr 2009
+    1. Tests updated to create common download 
+       directory.
+    2. Requirement for Perl-Dist updated to current
+       svn version. Check it out at:
+       http://svn.ali.as/cpan/trunk/Perl-Dist
+    3. Added test to detect dlltool problem 
+       (dlltool will not work within a path
+       with extensions.)
+    4. Updating to Module::Install 0.82
+	   
 0.169   Thu 09 Apr 2009
     1. With previous distributions where build_number 
        was the only parameter that was different, 
@@ -8,12 +19,12 @@ Changes for Perl extension Perl-Dist-WiX
     2. Some error messages are made clearer, and 
        error messages are documented in the pod for 
        Perl::Dist::WiX.
-	3. releaserc not included in distribution.
-	4. Additions to main .wxs template to disallow 
-	   downgrading and correctly detect upgrades.
+    3. releaserc not included in distribution.
+    4. Additions to main .wxs template to disallow 
+       downgrading and correctly detect upgrades.
     5. install_distribution_from_file routine added
-	   to support Perl::Dist::Bootstrap.
-	6. Updating to Module::Install 0.81.
+       to support Perl::Dist::Bootstrap.
+    6. Updating to Module::Install 0.81.
 	   
 0.162   Fri 27 Mar 2009
     1. Test and documentation update only.  Do not worry 
