--- a/README
+++ b/README
@@ -2,11 +2,41 @@ NAME
     Perl::Dist::WiX - Experimental 4th generation Win32 Perl distribution
     builder
 
+VERSION
+    This document describes Perl::Dist::WiX version 0.170.
+
 DESCRIPTION
     This package is the experimental upgrade to Perl::Dist based on Windows
     Install XML technology, instead of Inno Setup.
 
-METHODS
+    Perl distributions built with this module have the option of being
+    created as Windows Installer databases (otherwise known as .msi files)
+
+SYNOPSIS
+            # Sets up a distribution with the following options
+            my $distribution = Perl::Dist::WiX->new(
+                    msi               => 1,
+                    trace             => 1,
+                    build_number      => 1,
+                    cpan              => URI->new(('file://C|/minicpan/')),
+                    image_dir         => 'C:\myperl',
+                    download_dir      => 'C:\cpandl',
+                    output_dir        => 'C:\myperl_build',
+                    temp_dir          => 'C:\temp',
+                    app_id            => 'myperl',
+                    app_name          => 'My Perl',
+                    app_publisher     => 'My Perl Distribution Project',
+                    app_publisher_url => 'http:/myperl.invalid/',
+                    msi_directory_tree_additions => [ qw(
+                      c\bin\program
+                      perl\lib\Acme
+                    )],
+            );
+
+            # Creates the distribution
+            $bb->run();
+
+INTERFACE
   new
     The new method creates a new Perl Distribution build as an object.
 
@@ -18,18 +48,10 @@ METHODS
     overloading puposes only, or they revert to sensible defaults and
     generally never need to be modified.
 
-    The following is an example of the most likely attributes that will be
-    specified.
+    This routine may take a few minutes to run.
 
-      my $build = Perl::Dist::WiX->new(
-          image_dir => 'C:\vanilla',
-          temp_dir  => 'C:\tmp\vp',
-              msi_directory_tree_additions => [ qw(
-            c\bin\program
-            perl\lib\Acme
-          )],
-          cpan      => URI->new(('file://C|/minicpan/')),
-      );
+    An example of the most likely attributes that will be specified is in
+    the SYNOPSIS.
 
     Attributes that are required to be set are marked as *(required)* below.
     They may often be set by subclasses.
@@ -80,7 +102,8 @@ METHODS
         Setting this parameter to 0 prints out only MAJOR stuff and errors.
 
         Setting this parameter to 2 or above will print out the level as the
-        first thing on the line.
+        first thing on the line, and when an error occurs and an exception
+        object is printed, a stack trace will be printed as well.
 
         Setting this parameter to 3 or above will print out the filename and
         line number after the trace level on those lines that require a
@@ -116,7 +139,7 @@ METHODS
 
         The optional boolean "portable" param is used to indicate that the
         distribution is intended for installation on a portable storable
-        device.
+        device. This creates a distribution in zip format.
 
     *   zip
 
@@ -131,7 +154,7 @@ METHODS
 
     *   exe
 
-        The optional boolean "exe" param is deprecated.
+        The optional boolean "exe" param is unused at the moment.
 
     *   checkpoint_after
 
@@ -170,8 +193,9 @@ METHODS
     *   msi_debug
 
         The optional boolean "msi_debug" parameter is used to indicate that
-        a debugging MSI (one that creates a log in $ENV{TEMP}) will be
-        created if "msi" is also true.
+        a debugging MSI (one that creates a log in $ENV{TEMP} upon execution
+        in Windows Installer 4.0 or above) will be created if "msi" is also
+        true.
 
     *   build_number *(required)*
 
@@ -241,11 +265,11 @@ METHODS
         LGHT0130 errors at the end that refer to directories, add the
         applicable directories to this parameter.
 
-    The "new" constructor returns a Perl::Dist object, which you should then
-    call "run" on to generate the distribution.
+    The "new" constructor returns a Perl::Dist::WiX object, which you should
+    then call "run" on to generate the distribution.
 
   Accessors
-        $id = $dist->bin_candle;
+            $id = $dist->bin_candle;
 
     Accessors will return a specified portion of the distribution state.
 
@@ -323,7 +347,7 @@ METHODS
    dist_dir
     Provides a shortcut to the location of the shared files directory.
 
-    Returns a directory as a string or dies on error.
+    Returns a directory as a string or throws an exception on error.
 
    offline
     The Perl::Dist module has limited ability to build offline, if all
@@ -421,7 +445,7 @@ METHODS
     Returns true, or throws an error on exception.
 
    install_perl_* (* = 588, 589, or 5100)
-        $self->install_perl_5100;
+            $self->install_perl_5100;
 
     The "install_perl_*" method provides a simplified way to install Perl
     into the distribution.
@@ -432,17 +456,17 @@ METHODS
     Returns true, or throws an exception on error.
 
    install_perl_*_bin
-      $self->install_perl_5100_bin(
-          name       => 'perl',
-          dist       => 'RGARCIA/perl-5.10.0.tar.gz',
-          unpack_to  => 'perl',
-          license    => {
-              'perl-5.10.0/Readme'   => 'perl/Readme',
-              'perl-5.10.0/Artistic' => 'perl/Artistic',
-              'perl-5.10.0/Copying'  => 'perl/Copying',
-          },
-          install_to => 'perl',
-      );
+            $self->install_perl_5100_bin(
+              name       => 'perl',
+              dist       => 'RGARCIA/perl-5.10.0.tar.gz',
+              unpack_to  => 'perl',
+              license    => {
+                      'perl-5.10.0/Readme'   => 'perl/Readme',
+                      'perl-5.10.0/Artistic' => 'perl/Artistic',
+                      'perl-5.10.0/Copying'  => 'perl/Copying',
+              },
+              install_to => 'perl',
+            );
 
     The "install_perl_*_bin" method takes care of the detailed process of
     building the Perl binary and installing it into the distribution.
@@ -597,9 +621,9 @@ METHODS
 
   General installation methods
    install_binary
-      $self->install_binary(
-          name => 'gmp',
-      );
+            $self->install_binary(
+                    name => 'gmp',
+            );
 
     The "install_binary" method is used by library-specific methods to
     install pre-compiled and un-modified tar.gz or zip archives into the
@@ -608,8 +632,8 @@ METHODS
     Returns true or throws an exception on error.
 
    install_library
-      $self->install_binary(
-          name => 'gmp',
+      $self->install_library(
+              name => 'gmp',
       );
 
     The "install_binary" method is used by library-specific methods to
@@ -619,16 +643,16 @@ METHODS
     Returns true or throws an exception on error.
 
    install_distribution
-      $self->install_distribution(
-          name              => 'ADAMK/File-HomeDir-0.69.tar.gz,
-          force             => 1,
-          automated_testing => 1,
-          makefilepl_param  => [
-              'LIBDIR=' . File::Spec->catdir(
-                  $self->image_dir, 'c', 'lib',
-              ),
-          ],
-      );
+            $self->install_distribution(
+              name              => 'ADAMK/File-HomeDir-0.69.tar.gz,
+              force             => 1,
+              automated_testing => 1,
+              makefilepl_param  => [
+                      'LIBDIR=' . File::Spec->catdir(
+                              $self->image_dir, 'c', 'lib',
+                      ),
+              ],
+            );
 
     The "install_distribution" method is used to install a single CPAN or
     non-CPAN distribution directly, without installing any of the
@@ -660,9 +684,47 @@ METHODS
 
     Returns true or throws an exception on error.
 
+   install_distribution_from_file
+            $self->install_distribution_from_file(
+              file              => 'c:\distdir\File-HomeDir-0.69.tar.gz',
+              force             => 1,
+              automated_testing => 1,
+              makefilepl_param  => [
+                      'LIBDIR=' . File::Spec->catdir(
+                              $self->image_dir, 'c', 'lib',
+                      ),
+              ],
+            );
+
+    The "install_distribution_from_file" method is used to install a single
+    CPAN or non-CPAN distribution directly, without installing any of the
+    dependencies for that distribution, from disk.
+
+    It takes a compulsory 'file' param, which should be the location of the
+    distribution on disk.
+
+    The optional 'force' param allows the installation of distributions with
+    spuriously failing test suites.
+
+    The optional 'automated_testing' param allows for installation with the
+    "AUTOMATED_TESTING" environment flag enabled, which is used to either
+    run more-intensive testing, or to convince certain Makefile.PL that
+    insists on prompting that there is no human around and they REALLY need
+    to just go with the default options.
+
+    The optional 'makefilepl_param' param should be a reference to an array
+    of additional params that should be passwd to the "perl Makefile.PL".
+    This can help with distributions that insist on taking additional
+    options via Makefile.PL.
+
+    Distributions that do not have a Makefile.PL cannot be installed via
+    this routine.
+
+    Returns true or throws an exception on error.
+
    install_module
       $self->install_module(
-          name => 'DBI',
+              name => 'DBI',
       );
 
     The "install_module" method is a high level installation method that can
@@ -688,9 +750,9 @@ METHODS
 
    install_modules
       $self->install_modules( qw{
-          Foo::Bar
-          This::That
-          One::Two
+              Foo::Bar
+              This::That
+              One::Two
       } );
 
     The "install_modules" method is a convenience shorthand that makes it
@@ -714,15 +776,15 @@ METHODS
    install_file
       # Overwrite the CPAN::Config
       $self->install_file(
-          share      => 'Perl-Dist CPAN_Config.pm',
-          install_to => 'perl/lib/CPAN/Config.pm',
+              share      => 'Perl-Dist CPAN_Config.pm',
+              install_to => 'perl/lib/CPAN/Config.pm',
       );
       
   # Install a custom icon file
       $self->install_file(
-          name       => 'Strawberry Perl Website Icon',
-          url        => 'http://strawberryperl.com/favicon.ico',
-          install_to => 'Strawberry Perl Website.ico',
+              name       => 'Strawberry Perl Website Icon',
+              url        => 'http://strawberryperl.com/favicon.ico',
+              install_to => 'Strawberry Perl Website.ico',
       );
 
     The "install_file" method is used to install a single specific file from
@@ -760,8 +822,8 @@ METHODS
 
    install_launcher
       $self->install_launcher(
-          name => 'CPAN Client',
-          bin  => 'cpan',
+              name => 'CPAN Client',
+              bin  => 'cpan',
       );
 
     The "install_launcher" method is used to describe a binary program
@@ -782,10 +844,10 @@ METHODS
 
    install_website
       $self->install_website(
-          name       => 'Strawberry Perl Website',
-          url        => 'http://strawberryperl.com/',
-          icon_file  => 'Strawberry Perl Website.ico',
-          icon_index => 1,
+              name       => 'Strawberry Perl Website',
+              url        => 'http://strawberryperl.com/',
+              icon_file  => 'Strawberry Perl Website.ico',
+              icon_index => 1,
       );
 
     The "install_website" param is used to install a "Start" menu entry that
@@ -816,12 +878,289 @@ METHODS
 
     Returns true or throws an exception or error.
 
+DIAGNOSTICS
+    Note that most errors are defined as exception objects in the PDWiX,
+    PDWiX::Parameter, and PDWiX::Caught classes. Those errors will start
+    with "Perl::Dist::WiX error:"
+
+    Some parameter errors will be caught by Object::InsideOut. (Those errors
+    will be in the OIO class, and are not listed here.)
+
+  "Perl::Dist::WiX error:"
+    "Parameter missing or invalid"
+        (Implemented as a PDWiX::Parameter class)
+
+        The parameter mentioned is either missing (and it is required) or
+        invalid (for example, a string where an integer is required).
+
+        Often, but not always, exactly why the parameter is invalid is
+        mentioned, as well.
+
+    "Internal Error: Missing or invalid id"
+        A Perl::Dist::WiX::Base::Component has been created with a missing
+        or invalid id parameter. This should not happen.
+
+    "Internal Error: Calling as_string improperly (most likely, not calling
+    derived method)"
+        Perl::Dist::WiX::Base::Component->as_spaces is being called instead
+        of one of its derived methods.
+
+    "Internal Error: Odd number of parameters to add_directories_id"
+        The Perl::Dist::WiX->add_directories_id method takes pairs of
+        directories and the id to use when adding them. Somehow, these got
+        mismatched.
+
+    "Can't add the directories required"
+        The directories that are requested to be added under this directory
+        object aren't a subdirectory of the directory being referred to by
+        the directory object, so directory objects cannot be created within
+        this object for them.
+
+    "Internal Error: Parameters not passed in hash reference"
+        The method referred to takes all its parameters as a hash reference
+        (i.e. within "{ }" brackets) and this was not done.
+
+    "Can't create intermediate directories when creating %s (unsuccessful
+    search for %s)"
+        Perl::Dist::WiX::Directory->add_directory could not find a directory
+        object to add the new directory object to. (add_directory can only
+        create a directory object immediately under another one.)
+
+    "Complex feature tree not implemented in Perl::Dist::WiX %s."
+        Having more than one feature (and supporting conditional
+        installation of features by the user) has not been implemented in
+        Perl::Dist::WiX at this point.
+
+    "Error reading directory %s: %s"
+        Something happened when attempting to get a list of files for the
+        directory mentioned.
+
+    "Error reading packlist file %s: %s"
+        Something happened when attempting to read the packlist file
+        mentioned.
+
+    "Could not add %s"
+        The file to be added to the Perl distribution was completely outside
+        the distribution's directories, so a directory object could not be
+        found to refer to.
+
+    "The output_dir directory is not writable"
+        The directory specified by the "output_dir" parameter is not
+        writable by the current user. Specify a different directory, or have
+        your administrator set the directory so it can be written to.
+
+    "%s does not exist or is not readable"
+        Trying to use light.exe to compile a file that cannot be read or it
+        does not exist (someone may be trying to modify your file system
+        from under you?)
+
+    "Failed to find %s (Probably compilation error in %s)"
+        The first file mentioned could not be found. There was probably a
+        error in compilation of the second file.
+
+    "Could not open file %s for writing [$!] [$^E]"
+        Perl::Dist::WiX could not open the file mentioned. The reason should
+        be specified within the brackets.
+
+    "Fragment %s does not exist"
+        An attempt to add a file or files to a fragment that had not been
+        created yet has been detected.
+
+    "%s does not support Perl %s" or "Cannot generate perl, missing $s
+    method in %s"
+        You are attempting to install a version of the perl interpreter that
+        Perl::Dist::WiX does not support yet. If this is a new version of
+        the interpreter, or if Perl::Dist::WiX is documented as supporting
+        this version of the interpreter, please report this as a bug.
+
+    "Failed to resolve Module::CoreList hash for %s"
+        We could not get a hash of modules from Module::Corelist for the
+        version of Perl mentioned.
+
+    "Unknown package %s"
+        An improper package name was passed to Perl::Dist::WiX->binary_url.
+
+    "Checkpoints require a temp_dir to be set"
+        There was no "temp_dir" parameter set and a checkpoint routine was
+        called.
+
+    "Failed to find checkpoint directory"
+        Perl::Dist::WiX->checkpoint_load could not find a directory
+        "temp_dir"\checkpoint to load a checkpoint from.
+
+        Either a checkpoint was never saved, or the temporary directory is
+        different, or the checkpoint was deleted.
+
+    "Did not provide a toolchain resolver"
+        A Perl::Dist::Util::Toolchain object was not passed to
+        Perl::Dist::WiX->install_perl_toolchain, and that method was unable
+        to create one.
+
+    "Cannot install CPAN modules yet, perl is not installed"
+        Perl::Dist::WiX->install_cpan_upgrades was called before
+        Perl::Dist::WiX->install_perl.
+
+    "CPAN script %s failed"
+        An error happened creating or executing the script to upgrade or
+        install a CPAN module. The error will usually be mentioned on this
+        line, and the debug.err and debug.out files (in the "output_dir")
+        can be examined for assistance in determining what happened.
+
+    "Failure detected during cpan upgrade, stopping [%s]" or "Failure
+    detected installing %s, stopping [%s]"
+        The script to upgrade or install a CPAN module reported an error.
+        The error will usually be mentioned on this line, and the debug.err
+        and debug.out files (in the "output_dir") can be examined for
+        assistance in determining what happened.
+
+    "Cannot build Perl yet, dmake has not been installed"
+        install_dmake needs to be ran before install_perl.
+
+    "Can't execute %s"
+        We just installed something, but a test to make sure that it is
+        executable did not pass.
+
+    "Didn't expect install_to to be a %s"
+        The "install_to" parameter was the wrong type. It either needs to be
+        a hashref of directory mappings or a directory to install to.
+
+    "Failed to extract %s"
+        Perl::Dist::WiX->install_distribution or
+        Perl::Dist::WiX->install_distribution_from_file could not extract
+        the file referred to. The file may be corrupt.
+
+    "Could not find Makefile.PL in %s"
+        This module did not have a Makefile.PL when it was unpacked.
+
+        If it has only a Build.PL, it can be installed by install_module or
+        install_modules, but not install_distribution. Otherwise, there was
+        probably an extraction error.
+
+    "No .packlist found for %s. ..."
+        When this module was being installed, Perl::Dist::WiX was looking
+        for a packlist in order to create a fragment for the module.
+
+        The description given with this error tells how to tell
+        Perl::Dist::WiX to create the fragment another way.
+
+    "Template processing failed for $from_tt"
+        Perl::Dist::WiX->patch_file tried to use the template $from_tt to
+        create a patch, and the patch creation failed.
+
+    "Missing or invalid file $file or $file_tt in pathlist search"
+        Perl::Dist::WiX->patch_file tried to find a file with these two
+        names to create a patch, and the patch creation failed.
+
+    "Failed to find file $file"
+        Perl::Dist::WiX->patch_file could not find the file to patch.
+
+    "Failed to create $dir"
+        Perl::Dist::WiX tried to create a directory to cache the downloaded
+        modules in, and the creastion failed.
+
+    "No write permissions for LWP::UserAgent cache '$dir'"
+        Perl::Dist::WiX created a directory to cache the downloaded modules
+        in, but it can't write to the cache directory.
+
+    "make failed" or "perl failed"
+        Trying to execute make or perl failed.
+
+    "make failed (OS error)" or "perl failed (OS error)"
+        When make or perl was executed, an error was reported. Check the
+        debug.out and debug.err files for more information.
+
+    "CPAN modules file error: $!"
+        In Perl::Dist::WiX->install_module, we expected a file to be created
+        to verify that CPAN could find the module to be installed. When
+        install_module tried to read the file, we got the error reported.
+
+    "The script %s does not exist"
+        Install_launcher could not find a script at this location when
+        creating a shortcut.
+
+    "PATH directory $dir does not exist"
+        The directory being added to the PATH does not exist.
+
+    "Directory $path does not exist"
+        We tried to find the path to get patches from with
+        Perl::Dist::WiX->patch_include_path, but the path to get the patches
+        from does not exist.
+
+    "Copy error: %s" or "Move error: %s"
+        There was an error copying or moving a file.
+
+    "Error in archive extraction"
+        The archive that was downloaded was corrupt when an extraction
+        attempt was made.
+
+    "Didn't recognize archive type for $archive"
+        Perl::Dist::WiX can only install files with a .zip or .tar.gz
+        extension.
+
+    "%s has not been installed"
+        The install_* routine that adds this particular package needed to be
+        called before this one, but it wasn't.
+
+    "pexports failed to generate .def file" or "pexports failed to generate
+    .a file"
+        pexports or dlltool had an error and was not able to generate the
+        file required.
+
+    "Failed to make_path for %s" or "Failed to remake_path for %s"
+        The directory did not exist once made or remade.
+
+    "Could not write out $filename_in: File already exists."
+        The application name (as defined by the app_name parameter)
+        conflicts with one of the other fragments somehow. Please choose a
+        different application name.
+
+  "Error caught by Perl::Dist::WiX from other module:"
+    These exceptions are members of the PDWiX::Caught class.
+
+    The specific problem returned from the other module is reported on the
+    next line.
+
+    "Unknown delegation error occured"
+        This error occurs after "Completed install_c_libraries in %i
+        seconds" if "trace => 0" or "Pregenerating toolchain..." if "trace
+        => 1" or greater.
+
+    "Failed to generate toolchain distributions"
+        Perl::Dist::Util::Toolchain was not able to find out which modules
+        need upgraded in the CPAN toolchain.
+
+    "Template error"
+        There was a problem creating or processing the main .wxs template.
+
+    "Could not find distribution directory for Perl::Dist::WiX"
+        File::ShareDir could not find the directory that Perl::Dist::WiX
+        uses to store its required data
+        ("$Config{sitelib}\auto\share\Perl-Dist-WiX")
+
+    As other errors are noticed, they will be listed here.
+
+  "OIO::Args error: Missing mandatory initializer '%s' for class '%s'"
+    This is the Object::InsideOut equivalent of a PDWiX::Parameter error.
+
+TODO
+    1.  Need to add custom action to delete leftover files from perl
+        installation (0.172)
+
+    2.  Handle installing distributions that only contain a Build.PL by
+        executing the Build.PL (instead of throwing an exception) in
+        install_distribution. (0.180)
+
+    3.  Create a distribution for handling the XML-generating parts of
+        Perl::Dist::WiX and depend on it (0.180? 0.190?)
+
 SUPPORT
     Bugs should be reported via:
 
-    1) The CPAN bug tracker if you have an account there.
+    1) The CPAN bug tracker at
+    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Perl-Dist-WiX> if you
+    have an account there.
 
-    2) Email to bug-Perl-Dist-WiX at rt.cpan.org if you do not.
+    2) Email to <bug-Perl-Dist-WiX@rt.cpan.org> if you do not.
 
     For other issues, contact the topmost author.
 
@@ -836,7 +1175,7 @@ SEE ALSO
 COPYRIGHT
     Copyright 2009 Curtis Jewell.
 
-    Copyright 2008-2009 Adam Kennedy.
+    Copyright 2008 - 2009 Adam Kennedy.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
