--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Perl-Dist-WiX version 0.185
+Perl-Dist-WiX version 0.190
 
 DESCRIPTION
     This package is the experimental upgrade to Perl::Dist based on Windows
@@ -25,7 +25,7 @@ DEPENDENCIES
     Object::InsideOut 3.53, Perl::Dist 1.14, Process 0.26, Readonly 1.03,
     URI 1.35, and Win32 0.35.
 
-COPYRIGHT
+COPYRIGHT AND LICENSE
     Copyright 2009 Curtis Jewell.
 
     Copyright 2008 - 2009 Adam Kennedy.
