Import of CSJEWELL/Perl-Dist-WiX-1.090_103 from CPAN.
gitpan-cpan-distribution: Perl-Dist-WiX
gitpan-cpan-version:      1.090_103
gitpan-cpan-path:         CSJEWELL/Perl-Dist-WiX-1.090_103.tar.gz
gitpan-cpan-author:       CSJEWELL
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Changes for Perl extension Perl-Dist-WiX
 
+1.090_103   Sat 26 Sep 2009
+    1. Used to make Strawberry Perl October 2009 Beta 2.
+    2. Portability now works.
+    3. Small bug fixes.
+
 1.090_102   Mon 14 Sep 2009
     1. Major refactoring. (Now uses Moose rather 
        than Object::InsideOut.)
