Import of CSJEWELL/Perl-Dist-WiX-1.102_100 from CPAN.
gitpan-cpan-distribution: Perl-Dist-WiX
gitpan-cpan-version:      1.102_100
gitpan-cpan-path:         CSJEWELL/Perl-Dist-WiX-1.102_100.tar.gz
gitpan-cpan-author:       CSJEWELL
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Perl-Dist-WiX version 1.102001
+Perl-Dist-WiX version 1.102_100
 
 DESCRIPTION
     This package is the upgrade to Perl::Dist based on Windows Installer XML
