--- a/Changes
+++ b/Changes
@@ -1,10 +1,22 @@
 Changes for Perl extension Perl-Dist-WiX
 
-1.102002   Mon 22 Feb 2010
+1.102_102   Sat 20 Mar 2010
+    1. Scripts now will go to perl/site/bin.
+    2. perl 5.11.5 support is added.
+    3. Relocation script written in perl has been added.
+
+1.102_101   Fri 19 Feb 2010
+    1. Change $Config{installsitebin} from perl/bin to perl/site/bin,
+       and add perl/site/bin to the path.
+
+1.102_100   Fri 19 Feb 2010
+    1. Used to build Strawberry Perl Professional 5.10.1.1 Alpha 1.
+    2. Allow more than one DISTRIBUTIONS.txt file.
+
+1.102002   Sat 30 Jan 2010
     1. Allow use of previously created merge modules.
     2. Removal of MooseX::AttributeHelpers as a
        prerequisite.
-	3. Updates for new toolchain modules not working.
 
 1.102001   Fri 29 Jan 2010
     1. Changes to get Bootstrap to build.
