Import of CSJEWELL/Perl-Dist-WiX-1.200 from CPAN.
gitpan-cpan-distribution: Perl-Dist-WiX
gitpan-cpan-version:      1.200
gitpan-cpan-path:         CSJEWELL/Perl-Dist-WiX-1.200.tar.gz
gitpan-cpan-author:       CSJEWELL
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Perl-Dist-WiX version 1.102_102
+Perl-Dist-WiX version 1.200
 
 DESCRIPTION
     This package is the upgrade to Perl::Dist based on Windows Installer XML
