--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Perl-Dist-WiX version 1.200_102
+Perl-Dist-WiX version 1.250
 
 DESCRIPTION
     This package is the upgrade to Perl::Dist based on Windows Installer XML
