--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Perl-Dist-WiX version 1.250_100
+Perl-Dist-WiX version 1.500
 
 DESCRIPTION
     This package is the upgrade to Perl::Dist based on Windows Installer XML
